// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render correctly 1`] = `
<Modal
  closeButton={false}
  handleClose={[Function]}
  show={true}
/>
`;

exports[`Modal should render with props closeButton 1`] = `
<Modal
  closeButton={true}
  handleClose={[Function]}
  show={true}
/>
`;
